Improved RecipeType.valueOf by indexing the types by their ids.